fix: use userId to filter submission results
